docs/tests/typing/bad/testfile-arith-4.cpp

class S { public: int a; };
int main() { S s; char *p; p+s; }
